[tool.briefcase]
project_name = "Maestral"
bundle = "com.samschott"
version = "1.7.0"
url = "https://maestral.app"
license = "MIT license"
author = "Sam Schott"
author_email = "sam.schott@outlook.com"

[tool.briefcase.app.maestral-cocoa]
formal_name = "Maestral"
description = "An open-source Dropbox client for macOS and Linux"
icon = "icon/maestral"
sources = ["src/maestral_cocoa"]
requires = [
    "chardet==5.1.0",
    "click==8.1.3",
    "importlib_metadata;python_version<'3.8'",
    "maestral==1.7.0",
    "markdown2==2.4.6",
    "rubicon-objc==0.4.5",
    "toga==0.3.0",
]

[tool.briefcase.app.maestral-cocoa.macOS]
requires = [
    "toga-cocoa==0.3.0",
]
build = "79"

[tool.briefcase.app.maestral-cocoa.linux]
requires = [
    "toga-gtk==0.3.0",
]
system_requires = [
    "libgirepository1.0-dev",
    "libcairo2-dev",
    "libpango1.0-dev",
    "libwebkitgtk-3.0-0",
    "gir1.2-webkit-3.0",
]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
extend-exclude = "macOS/(.*?)"

[build-system]
requires = ["setuptools>=41.0", "wheel"]
build-backend = "setuptools.build_meta"
