[tool.briefcase]
project_name = "Maestral"
bundle = "com.samschott.maestral"
version = "1.8.0.dev0"
url = "https://maestral.app"
license = "MIT license"
author = "Sam Schott"
author_email = "sam.schott@outlook.com"
template = "https://github.com/samschott/briefcase-macOS-Xcode-template.git"
template_branch = "maestral"

[tool.briefcase.app.maestral-cocoa]
formal_name = "Maestral"
description = "An open-source Dropbox client for macOS and Linux"
icon = "icon/maestral"
sources = ["src/maestral_cocoa"]
requires = [
    "chardet==5.1.0",
    "click==8.1.3",
    "importlib_metadata;python_version<'3.8'",
    "maestral==1.8.0.dev0",
    "markdown2==2.4.8",
    "rubicon-objc==0.4.6",
    "toga==0.3.1",
]
sparkle_feed_url = "https://maestral.app/appcast.xml"
sparkle_public_key = "RugM2eM14xHixaeHpl5uWSq7+sDZvYi52Xpz4IXpAdA="

[tool.briefcase.app.maestral-cocoa.macOS]
requires = [
    "toga-cocoa==0.3.1",
]
build = "90"

[tool.briefcase.app.maestral-cocoa.linux]
supported = false

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
extend-exclude = "macOS/(.*?)"

[build-system]
requires = ["setuptools>=41.0", "wheel"]
build-backend = "setuptools.build_meta"
