[tool.briefcase]
project_name = "Maestral"
bundle = "com.samschott.maestral"
version = "1.9.4"
url = "https://maestral.app"
license.file = "LICENSE.txt"
author = "Sam Schott"
author_email = "sam.schott@outlook.com"
template = "https://github.com/samschott/briefcase-macOS-Xcode-template.git"
template_branch = "maestral-v2"

[tool.briefcase.app.maestral-cocoa]
formal_name = "Maestral"
description = "An open-source Dropbox client for macOS and Linux"
icon = "icon/maestral"
sources = ["src/maestral_cocoa"]
requires = [
    "chardet==5.2.0",
    "click==8.1.7",
    "maestral==1.9.4",
    "markdown2==2.4.13",
    "rubicon-objc==0.4.7",
    "toga==0.4.7",
]
sparkle_feed_url = "https://maestral.app/appcast.xml"
sparkle_public_key = "RugM2eM14xHixaeHpl5uWSq7+sDZvYi52Xpz4IXpAdA="

[tool.briefcase.app.maestral-cocoa.macOS]
entitlement."com.apple.security.cs.disable-library-validation" = false
info."LSUIElement" = true
requires = [
    "toga-cocoa==0.4.7",
]
cleanup_paths = [
    "*/unittest",
]
build = "110"

[tool.briefcase.app.maestral-cocoa.linux]
supported = false

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
extend-exclude = "macOS/(.*?)"

[build-system]
requires = ["setuptools>=41.0", "wheel"]
build-backend = "setuptools.build_meta"
