[metadata]
name = maestral-cocoa
version = 1.7.0.dev2
author = Sam Schott
author_email = sam.schott@outlook.com
license = MIT
description = Open-source Dropbox client for macOS and Linux.
url = https://maestral.app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
zip_safe = False
setup_requires = build
install_requires =
    click
    maestral>=1.7.0.dev0
    markdown2
    toga==0.3.0
    rubicon-objc>=0.4.5
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
maestral_cocoa = resources/*

[options.entry_points]
console_scripts =
    maestral_cocoa = maestral_cocoa.__main__:main
maestral_gui = maestral_cocoa = maestral_cocoa.app:run

[options.extras_require]
dev =
    black
    bump2version
    flake8
    mypy
    pre-commit
    pytest
    pytest-cov
    types-pkg_resources
    types-requests

[flake8]
ignore = E203,E501,W503,H306,F403
statistics = True
filename = src/

[mypy]
ignore_missing_imports = True
files = src
